[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyfortify"
version = "0.1.0"
description = "Análise quantitativa de força de credenciais conforme padrões NIST e OWASP"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jonas Pinto"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JonasPinto/KeyFortify"
Repository = "https://github.com/JonasPinto/KeyFortify.git"